--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="row">
         <div class="large-12 columns">
           <hr>
-          <h4 id="utility"><a href="#utility">Utility<h1>
+          <h4 id="utility"><a href="#utility">Utility</a><h1>
             <!-- <p class="text-center"> -->
             <p>Learn these two phrases, and say them often: 
               <ul>
