Point source code to repo, not profile page

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="large-6 columns">
               <ul class="inline-list right">
                 <li><a href="https://www.linkedin.com/in/deansilfen">About Dean</a></li>
-                <li><a href="https://github.com/djds23">Source Code</a></li>
+                <li><a href="https://github.com/djds23/amsterdean">Source Code</a></li>
               </ul>
             </div>
           </div>
