--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="large-12 columns">
           <hr>
-          <h1 class="text-center">Rent a god danm bike<h1>
+          <h1 class="text-center">Rent a god damn bike<h1>
             <p class="text-center">People bike everywhere in Amsterdam. Renting a bike is like renting a car, but slightly easier to park. Do it, and follow the rules.
         </div>
       </div>
