--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <p>Not much, but I spent a couple great months in the great city of Amsterdam. While there I did a lot of things. Many of those things I would recommend other people do as well. And here we arrive at this website, these are things I recommend you do in the Amsterdam.</p>
             </div>
             <div class="large-6 columns">
-              <p>Keep in mind these recommendations are about 4 years old at this point. However people who have visited recently told me they still hold up.</p>
+              <p>Keep in mind these recommendations are sorta old at this point. However people who have visited recently told me they still hold up.</p>
             </div>
           </div>
         </div>
